--- a/style.css
+++ b/style.css
@@ -9,3 +9,12 @@ img {
 #headshot {
 	float: right;
 }
+
+#headshot > p {
+	width: 100%;
+	text-align: center;
+}
+
+#headshot > * {
+	margin: 0px;
+}
